--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,13 +4,14 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "HyperV-Quick-Toggle"
-version = "1.0.2"
+version = "1.0.3"
 description = "GUI per abilitare/disabilitare Hyper-V su Windows"
 authors = [
     { name = "Mizu" }
 ]
 readme = "README.md"
 requires-python = ">=3.10"
+license = { text = "MIT" }
 
 dependencies = [
     "sv-ttk>=2.5"
